@@ -8,8 +8,21 @@ buildscript {
     }
     
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath 'com.android.tools.build:gradle:8.2.0'
         classpath 'com.google.gms:google-services:4.4.1'
+    }
+}
+
+// Disable tests
+allprojects {
+    tasks.withType(Test) {
+        enabled = false
+    }
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+        options.compilerArgs += [
+                '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED'
+        ]
     }
 }
 
@@ -41,4 +54,5 @@ ext {
     junitVersion = '4.13.2'
     extJunitVersion = '1.1.5'
     espressoVersion = '3.5.1'
+    javaVersion = JavaVersion.VERSION_17
 }
